# bostadspuls

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  railway.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
api/: .env.example  Dockerfile
api/app/: __init__.py  bigquery.py  cache.py  config.py  logging_config.py  main.py  metrics.py
api/app/routers/: compare.py  health.py  property_types.py  regions.py  trends.py
api/tests/: test_cache.py  test_compare.py  test_health.py  test_metrics.py  test_property_types.py
docs/: architecture.md  deployment.md  metabase-setup.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: wrangler.toml
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/assets/: sweden-counties.geojson  sweden-counties.json
ingestion/bostadspuls_ingest/: SCHEMA.md  __init__.py  bigquery.py  booli.py  config.py  regions.py  scb.py
ingestion/tests/: test_booli.py  test_scb.py
orchestration/: pyproject.toml
orchestration/bostadspuls_dagster/: __init__.py  assets.py  dbt_assets.py  definitions.py  resources.py  schedules.py
quality/: checks_marts.yml  checks_raw.yml  soda_config.yml
transform/: dbt_project.yml  profiles.yml.example
transform/tests/: test_area_range.sql  test_future_sales.sql  test_price_range.sql
(+42 files in other folders)
