[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bostadspuls-dagster"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.7",
    "dagster-dbt>=0.23",
    "dagster-webserver>=1.7",
    "bostadspuls",
]

[tool.dagster]
module_name = "bostadspuls_dagster"
